# Axum-with-Askama-Template-Example

./: .env.example  Cargo.toml  README.md
src/: askama_route.rs  lib.rs  settings.rs
templates/: hello.html
