[package]
name = "axum-askama"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
dotenv = "0.15.0"
listenfd = "1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace"] }
